<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@drawable/dialog_drawable_bg"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginVertical="@dimen/text_20"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog__title_error"
        android:textColor="@color/black"
        android:textSize="@dimen/space_26"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/ip_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16"
        android:text="@string/dialog__message_error"
        android:layout_marginVertical="20dp"

        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/open"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />
    <TextView
        android:id="@+id/open"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dialog_button_title"
        android:fontFamily="sans-serif-black"
        android:textSize="16dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintTop_toBottomOf="@id/ip_edit_text"
        android:layout_marginTop="@dimen/space_20"
        android:textAlignment="center"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>