<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="fevrier"
        android:paddingVertical="5dp"
        android:background="#9E9E9E"
        android:paddingHorizontal="@dimen/space_20"
        android:id="@+id/month"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/avgmintemp"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:id="@+id/avgMinTemp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"

            android:layout_height="wrap_content"
            android:text="@string/absmaxtemp"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:id="@+id/avgDailyRainfall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/avgdailyrainfall"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:id="@+id/absMaxTemp"/>
    </LinearLayout>









</LinearLayout>